streaming search: wrap skipped items messages correctly

--- a/client/web/src/search/results/streaming/progress/StreamingProgress.scss
+++ b/client/web/src/search/results/streaming/progress/StreamingProgress.scss
@@ -64,6 +64,7 @@
         &.markdown code {
             // Force line breaks on markdown `code` elements
             white-space: normal;
+            word-break: break-all;
         }
     }
 
